# spdlog

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
.github/workflows/: linux.yml  macos.yml  windows.yml
bench/: CMakeLists.txt  async_bench.cpp  bench.cpp  latency.cpp
cmake/: fmtlib.cmake  spdlog.pc.in  spdlogConfig.cmake.in  spdlog_config.h.in
example/: CMakeLists.txt  example.cpp
include/spdlog/: async.h  async_logger-inl.h  async_logger.h  attributes.h  bin_to_hex.h  common.h  file_event_handlers.h  filename_t.h  logger.h  pattern_formatter-inl.h  pattern_formatter.h  source_loc.h  spdlog.h  stopwatch.h
include/spdlog/cfg/: helpers.h
include/spdlog/details/: async_log_msg.h  context.h  err_helper.h  file_helper.h  fmt_helper.h  log_attr.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  null_mutex.h  os.h  registry.h  synchronous_factory.h
include/spdlog/fmt/: bin_to_hex.h  fmt.h
include/spdlog/sinks/: android_sink.h  ansicolor_sink.h  async_sink.h  base_sink.h  basic_file_sink.h  callback_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  kafka_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  udp_sink.h  win_eventlog_sink.h  wincolor_sink.h
scripts/: format.sh
src/: async_logger.cpp  color_sinks.cpp  common.cpp  logger.cpp  pattern_formatter.cpp  spdlog.cpp
src/details/: async_log_msg.cpp  context.cpp  err_helper.cpp  file_helper.cpp  log_msg.cpp  log_msg_buffer.cpp  os_filesystem.cpp  os_unix.cpp  os_windows.cpp  registry.cpp  thread_pool.cpp
src/sinks/: ansicolor_sink.cpp  async_sink.cpp  base_sink.cpp  basic_file_sink.cpp  rotating_file_sink.cpp  sink.cpp  stdout_sinks.cpp  wincolor_sink.cpp
tests/: CMakeLists.txt  includes.h  test_async.cpp  test_attributes.cpp  test_bin_to_hex.cpp  test_create_dir.cpp  test_custom_callbacks.cpp  test_daily_and_rotation_loggers.cpp  test_errors.cpp  test_file_helper.cpp  test_file_logging.cpp  test_fmt_helper.cpp  test_macros.cpp  test_misc.cpp  test_mpmc_q.cpp  test_no_source_location.cpp  test_pattern_formatter.cpp  test_registry.cpp  test_ringbuffer_sink.cpp  test_sink.h  test_source_location.cpp  test_stdout_api.cpp  test_time_point.cpp  utils.cpp  utils.h
